--- a/home.html
+++ b/home.html
@@ -57,12 +57,12 @@
             <p class="dropcap">I am a geek. When not staring at math problems or code, I&apos;m producing, consuming, or criticizing music. Hardmath123 is my alias on the internet.<sup>[<a href="https://github.com/Hardmath123">1</a>] [<a href="http://scratch.mit.edu/users/Hardmath123">2</a>] [<a href="http://stackoverflow.com/users/3053429/hardmath123">3</a>]</sup>
 
             <h2><code>$(whereami)</code></h2>
-            <p>This blog is an attempt to archive math problems and other miscellaneous geekeries I come across once in a while.
+            <p>You're at my blog, a collection of posts about anything geeky.
 
             <blockquote><em>I'm not tryin' to cause a big s-s-sensation,<br/><br/>I'm just bloggin' 'bout my g-g-generation.</em></blockquote>
 
             <h2><code>ping $ME</code></h2>
-            <p>The easiest way to reach me is by posting a comment on any of the blog posts.
+            <p>You can email me at <a href="mailto:contact@comfortablynumbered.appspotmail.com">contact@comfortablynumbered.appspotmail.com</a>
         </div>
         
         {% include "footer.html" %}
